# QGIS

./: .gitmodules  CMakeLists.txt
.devcontainer/: GETTING_STARTED.md  TODO.md
.devcontainer/qt5/: Dockerfile  devcontainer.json
python/PyQt6/core/: core_auto.sip
python/core/auto_generated/: qgsfeatureasset.sip.in  qgsmimedatautils.sip.in
src/analysis/processing/: qgsalgorithmfilterbygeometry.cpp  qgsalgorithmpackage.cpp
src/app/: CMakeLists.txt  qgisapp.cpp  qgsapplayertreeviewmenuprovider.cpp  qgshandlebadlayers.cpp  qgsidentifyresultsdialog.cpp  qgsidentifyresultsdialog.h  qgslayerstylingwidget.cpp  qgslayertreeviewfilterindicator.cpp  qgslayertreeviewtemporalindicator.cpp  qgsmaptoolselectutils.cpp
src/app/browser/: qgsinbuiltdataitemproviders.cpp
src/app/georeferencer/: qgsgeorefmainwindow.cpp  qgstransformsettingsdialog.cpp
src/app/labeling/: qgsmaptoollabel.cpp
src/app/layers/: qgsapplayerhandling.cpp
src/app/project/: qgsprojectsurveysettingswidget.cpp  qgsprojectsurveysettingswidget.h
src/app/survey/: qgssurveyattributesdialog.cpp  qgssurveyattributesdialog.h  qgssurveylayerproperties.cpp  qgssurveylayerproperties.h  qgssurveylayerstylewidget.cpp  qgssurveylayerstylewidget.h
src/core/: CMakeLists.txt  qgis.h  qgsapplication.cpp  qgselevationutils.cpp  qgsfeatureasset.cpp  qgsfeatureasset.h  qgsfield.cpp  qgsgdalutils.cpp  qgsiconutils.cpp  qgsiconutils.h  qgslayerdefinition.cpp  qgsmapclippingutils.cpp  qgsmaplayerfactory.cpp  qgsmaplayerproxymodel.cpp  qgsmimedatautils.cpp  qgsmimedatautils.h
src/core/browser/: qgsfilebaseddataitemprovider.cpp  qgslayeritem.cpp
src/core/expression/: qgsexpression.cpp  qgsexpressionfunction.cpp  qgsexpressionutils.h
src/core/labeling/: qgspallabeling.cpp
src/core/maprenderer/: qgsmaprendererjob.cpp
src/core/network/: qgsvsinetworkfilehandler.cpp  qgsvsinetworkfilehandler.h
src/core/processing/: qgsprocessingutils.cpp  qgsprocessingutils.h
src/core/project/: qgsproject.cpp  qgsproject.h  qgsprojectsurveyproperties.cpp  qgsprojectsurveyproperties.h
src/core/providers/: qgsdataprovider.h  qgsproviderregistry.cpp  qgsproviderregistry.h  qgsprovidersublayerdetails.cpp  (+2 more)
src/gui/: CMakeLists.txt  qgsadvanceddigitizingdockwidget.cpp  qgsassetguiutils.cpp  qgsassetguiutils.h  qgsbrowserdockwidget_p.cpp  qgsdatasourcemanagerdialog.cpp  qgsidentifymenu.cpp  qgsmapcanvas.cpp  qgsmaplayerloadstyledialog.cpp  qgsmaplayerstylecategoriesmodel.cpp  qgsmaplayerstylemanagerwidget.cpp  qgsoptionsdialogbase.cpp  qgsoptionsdialogbase.h  qgstreewidget.cpp  qgstreewidget.h
src/providers/: CMakeLists.txt
src/providers/sdal/: CMakeLists.txt  qgssdalconversion.cpp  qgssdalconversion.h  qgssdalprovider.cpp  qgssdalprovider.h  qgssdalprovidergui.cpp  qgssdalsourceselect.cpp  qgssdalsourceselect.h
src/ui/: CMakeLists.txt  qgsidentifyresultsbase.ui  qgsprojectsurveysettingswidgetbase.ui  qgssdalsourceselectbase.ui  qgssurveylayerpropertiesbase.ui  qgssurveyrendererpropertiesdialogbase.ui
(+46 files in other folders)
